--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,24 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/tozlogo"
+        android:icon="@drawable/tozboya"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/tozlogo"
+        android:roundIcon="@drawable/tozboya"
         android:supportsRtl="true"
         android:theme="@style/Theme.TozBoya"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.UrunBilgisi_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MusteriBilgisiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.UrunBilgileriActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.FiyatSorgulamaActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.TozBoyaActivity"
             android:exported="false" />
